# sd-lora-trainer

./: .dockerignore  .gitignore  README.md  __init__.py  cog.yaml  cog_test_train.sh  comfyUI_workflow_lora_adiff.json  comfyUI_workflow_lora_txt2img.json  comfyui_workflow_img.json  create_hyperparam_sweep.py  dataset_and_utils.py  evaluate.py  evaluate_checkpoints_old.py  faces.sh  faces3.sh  generate_sweep_params.py  instructions_README.md  io_utils.py  lora_adiff.json  lora_utils.py  main.py  main_sd3.py  node.py  nohup.out  predict.py  preprocess.py  pyproject.toml  requirements.txt  sd15_face_sweep.sh  sd3_inference.py  stitchly.sh  styles_final.sh  test.py  test_inference.py  test_train.sh  test_trainer.sh  trainer_pti.py  training_args.json  training_args_face.json  training_args_face_sd15.json  (+11 more)
ComfyUI_workflows/: example_traininig_comfyui_workflow.json  inference_Eden_LoRa_txt2img.json  inference_lora_SDXL_txt2img.json  train_lora.json  traininig_workflow.json
debug/: generate_test_imgs.py
scripts/: create_hyperparam_sweep.py  eval_hyperparam_sweep.py  evaluate.py  evaluate_gridsearch.py  old_eval_hyperparam_sweep.py  parse_results.py  test_inference.py
train_configs/: full_finetuning_example.json  stitchly_1.json  style.json  test.json  ti_SDXL.json  training_args_beeple.json  training_args_face_sd15.json  training_args_face_sdxl.json  training_args_object.json  training_args_style_sd15.json  training_args_style_sd15_noti.json  training_args_style_sdxl.json  x.json  xander.json
trainer/: __init__.py  checkpoint.py  config.py  dataset.py  inference.py  (+10 more)
(+23 files in other folders)
