[project]
name = "Eden LoRa Trainer"
description = "Highly optimized and fast LoRa trainer for SD15 and SDXL models. Does LoRa training, textual inversion and full finetuning!"
version = "1.0.0"
license = "GPL-3.0 license"

[project.urls]
Repository = "https://github.com/edenartlab/sd-lora-trainer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "eden"
DisplayName = "Eden LoRa Trainer"
Icon = ""
